--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "liu-km/liu-km.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.JPG"
   name             : "Qianli Liu"
   pronouns         : "He/Him" # Pronouns for the author
   shortname        : "KM" # Short name for the author
