--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "liu-km/liu-km.github.io"
 author:
   # Biographic information
   avatar           : "profile.JPG"
-  name             : "Qianli Liu"
+  name             : "LIU Qianli"
   pronouns         : "He/Him" # Pronouns for the author
   shortname        : "KM" # Short name for the author
   bio              : "Year 1 PhD student in the Department of Computer Science and Engineering at HKUST."
