--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,4 +1,4 @@
 - course: "COMP1021: Introduction to Computer Science"
   # role: "Teaching Assistant"
   institution: "The Hong Kong University of Science and Technology (HKUST)"
-  semester: "Spring 2025" 
+  semester: "2025 Spring" 
